# ACD2

./: .env_example  .gitignore  PROJECT_COMPLETE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  azure_llm.py  core.py  tools.py
src/database/: __init__.py  chroma.py
src/utils/: __init__.py  pdf_helper.py
